Router should retry CreateIndexes on retriable errors

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-07-21, CAR Team 2025-08-04
    • 200
    • 🟥 DDL
    • None
    • None
    • None
    • None
    • None
    • None

      Currently, the routers do not retry CreateIndexes command on shard even if they fail with retriable errors. Considering that the operation is idempotent, e.g. if the index already exists it will return ok: 1 it should be totally safe to retry the operation in case of stepdowns or network errors.

            Assignee:
            Tommaso Tocci
            Reporter:
            Tommaso Tocci
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: