SERVER-107767 Router should retry CreateIndexes on retriable errors (#38747)

GitOrigin-RevId: 1e3da12ceb8f0f2c01396d2d37d72655f8e918ad